fix: set width instead of padding to avoid elements from stretching when zooming out

--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 
 :root {
     /* COLOR */
-    --clr-bg: #1F2937;
+    --clr-bg: #1f2937;
     --clr-cta: #3882f6;
-    --clr-primary: #F9FAF8;
-    --clr-secondary: #E5E7EB;
+    --clr-primary: #f9faf8;
+    --clr-secondary: #e5e7eb;
     --clr-dark-secondary: #5b6470;
 
     /* FONT SIZE */
@@ -29,18 +29,24 @@
 body {
     display: flex;
     flex-flow: column nowrap;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     height: 100svh;
 }
 
 /* Header Section */
 
 .header {
-    align-items: center;
     background-color: var(--clr-bg);
     display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+}
+
+.header__container {
+    align-items: center;
+    display: flex;
     justify-content: space-between;
-    padding: 1em var(--padding-page-horizontal) 0;
+    width: min(120ch, 100vw - 2rem);
 }
 
 .header__logo {
@@ -65,13 +71,19 @@ body {
 .hero {
     background-color: var(--clr-bg);
     display: flex;
-    padding: 7em var(--padding-page-horizontal);
+    justify-content: center;
+    padding: 8rem 0;
 }
 
-.hero__container {
+.hero__container-row {
+    display: flex;
+    width: min(120ch, 100vw - 2rem);
+}
+
+.hero__container-col {
     flex: 1;
     max-width: 50%;
-    padding-right: 6em;
+    padding-right: 6rem;
 }
 
 .hero__header {
@@ -98,7 +110,9 @@ body {
 /* Gallery Section */
 
 .gallery {
-    text-align: center;
+    align-items: center;
+    display: flex;
+    flex-flow: column nowrap;
     padding: 3em 0 8em;
 }
 
@@ -110,25 +124,27 @@ body {
 .gallery__container {
     display: flex;
     flex-flow: row wrap;
-    gap: 3.5em;
+    gap: 2.2rem;
     justify-content: center;
+    width: min(87ch, 100vw - 2rem);
 }
 
 .gallery__card {
-    width: 170px;
+    flex: 1;
 }
 
 .gallery__text {
     color: var(--clr-dark-secondary);
     font-size: var(--fs-sm);
+    text-align: center;
 }
 
 .gallery__img {
+    aspect-ratio: 1 / 1;
     border-radius: 16px;
-    height: 170px;
-    margin-bottom: 0.3em;
+    margin-bottom: 0.3rem;
     object-fit: cover;
-    width: 100%;
+    max-width: 100%;
 }
 
 /* Quote Section */
@@ -143,24 +159,28 @@ body {
     padding: 8em 0;
 }
 
+.quote__container {
+    width: min(87ch, 100vw - 2rem);
+}
+
 .quote__text {
     font-size: var(--fs-lg);
     font-style: italic;
     font-weight: 300;
-    width: 790px;
 }
 
 .quote__source {
     font-size: var(--fs-md);
     font-weight: 500;
     text-align: right;
-    width: 790px;
 }
 
 /* Call to Action Section */
 
 .call-to-action {
-    padding: 8em var(--padding-page-horizontal);
+    padding: 7rem 0;
+    display: flex;
+    justify-content: center;
 }
 
 .call-to-action__wrapper {
@@ -169,7 +189,8 @@ body {
     color: var(--clr-primary);
     display: flex;
     justify-content: space-between;
-    padding: 3em 8em;
+    padding: 3rem 8rem;
+    width: min(120ch, 100vw - 2rem);
 }
 
 .call-to-action__text {
@@ -202,7 +223,7 @@ body {
 
 .footer {
     background-color: var(--clr-bg);
-    padding: 2.5em 0;
+    padding: 2.5rem 0;
 }
 
 .footer__text {
